2011-03-05  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems, configure.ac.in:
 - Check for GNU-style strerror_r.
 src/util.cxx:
 - Dump Bart's wonderful strerror_r trick; clang didn't like it.
2011-03-05  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in, include/pqxx/result.hxx, src/binarystring.cxx,
 src/connection_base.cxx, src/cursor.cxx, src/largeobject.cxx,
 src/pipeline.cxx, src/result.cxx, src/statement_parameters.cxx,
 src/tablewriter.cxx, src/util.cxx:
 - Fixed clang errors; mostly signedness issues.
2011-02-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/unit/test_notification.cxx:
 - Eliminated some more use of already-committed nontransaction.
 - Payload should be single-quoted, not double-quoted.
 test/test_helpers.hxx, test/test_main.hxx, test/test025.cxx:
 - New helper drop_table.
 - Fixed test for older backends, which don't have "DROP TABLE IF EXISTS."
2011-02-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/largeobject.hxx, include/pqxx/result.hxx, include/pqxx/util.hxx:
 - Fixes for problems spotted by clang++.
 tools/preprelease
 - Test against clang as well as gcc.
2011-02-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/basic_connection.hxx, include/pqxx/cursor.hxx:
 - Fixed "don't include this" directions; fixes #211.  Thanks ehoeks.
 include/pqxx/basic_connection:
 - Cosmetic.
2011-02-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/libpqxx.xml, include/Makefile.am, include/pqxx/connection_base.hxx,
 include/pqxx/internal/gates/connection-notify-listener.hxx,
 include/pqxx/notification, include/pqxx/notification.hxx,
 include/pqxx/notify-listen, include/pqxx/notify-listen.hxx,
 include/pqxx/pqxx, include/pqxx/trigger.hxx, src/connection_base.cxx,
 src/Makefile.am, src/notification.cxx, src/notify-listen.cxx,
 test/unit/test_notification.cxx:
 - Deprecated in favour of new notification_receiver.
 - Takes payload argument (in addition to existing backend_pid).
 include/pqxx/internal/gates/connection-notify-listener.hxx: